--- a/html/online.html
+++ b/html/online.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <meta charset="utf-8"/>
+    </head>
     <body>
 
         <script type="text/javascript" src="/_ah/channel/jsapi"></script>
